--- a/.github/workflows/compile-rockchip-rk35xx-kernel.yml
+++ b/.github/workflows/compile-rockchip-rk35xx-kernel.yml
@@ -83,7 +83,7 @@ on:
           - -summer-growing
           - -autumn-harvesting
           - -winter-storing
-          - -yourname
+          - -ccx
       kernel_config:
         description: "Set the path of kernel .config"
         required: false
